# mastermind

./: CMakeLists.txt  FILE_ID.DIZ  README  README.LINUX  build.sh  hscore.ans  main.c  mastermind.ans
